--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Hello World</title>
   </head>
   <body>
     <div id="root">
-      <script src="index.pack.js"></script>
     </div>
   </body>
 </html>
